--- a/index.html
+++ b/index.html
@@ -2,9 +2,31 @@
 <html>
   <head>
     <title>Main File</title>
+    <link rel="stylesheet" href="styles/css/main.css">
   </head>
   <body>
-    <h1> Test File</h1>
+    <header class="Header">
+      <div class="container">
+        <div class="Header-wrapper">
+          <img src="image/Dell.jpg" class="Header-img">
+          <div class="Header-right">
+            <div class="Header-nav">Home</div>
+            <div class="Header-nav">About Us</div>
+            <div class="Header-nav">Contact Us</div>
+            <div class="Header-separator-y"></div>
+            <div class="Header-nav">Login</div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="l-section">
+      <div class="container">
+        <h4>To know more, please</h4>
+        <p> Click Here </p>
+        <button class="Button Button--learnMore"> Learn More</button>
+      </div>
+    </section>
+    <h1 class="class"> Test File</h1>
     <p> Some Description </p>
   </body>
 </html>
