nav bar aligned vertically

--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!Doctype html>
 <html>
   <head>
-    <title>Main File</title>
+    <title>Shweta Sharma</title>
     <link rel="stylesheet" href="styles/css/main.css">
   </head>
   <body>
     <header class="Header">
-      <div class="container">
-        <div class="Header-wrapper">
-          <img src="image/Dell.jpg" class="Header-img">
-          <div class="Header-right">
-            <div class="Header-nav">Home</div>
-            <div class="Header-nav">About Us</div>
-            <div class="Header-nav">Contact Us</div>
-            <div class="Header-separator-y"></div>
-            <div class="Header-nav">Login</div>
-          </div>
-        </div>
+      <img src="image/logo.jpg" class="Header-img">
+      <div class="Header-right">
+        <div class="Header-nav">Home</div>
+        <div class="Header-nav">About Us</div>
+        <div class="Header-nav">Contact Us</div>
+        <div class="Header-nav">Login</div>
       </div>
     </header>
     <section class="l-section">
