--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="styles/css/main.css">
   </head>
   <body>
+    <section class="Initial js-Initial">
+      Hiiiiiii
+    </section>
     <header class="Header">
       <img src="image/logo.jpg" class="Header-img">
       <div class="Header-right">
@@ -23,5 +26,7 @@
     </section>
     <h1 class="class"> Test File</h1>
     <p> Some Description </p>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
